--- a/littlebot_base/CMakeLists.txt
+++ b/littlebot_base/CMakeLists.txt
@@ -107,6 +107,30 @@ ament_export_dependencies(
   rclcpp
 )
 
+# Coverage options
+option(ENABLE_COVERAGE "Enable test coverage reporting" OFF)
+
+if(ENABLE_COVERAGE AND CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
+  # Add coverage flags
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --coverage -O0 -g")
+  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} --coverage -O0 -g")
+  set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} --coverage")
+  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} --coverage")
+
+  # Find coverage tools
+  find_program(LCOV_PATH lcov)
+  find_program(GENHTML_PATH genhtml)
+  find_program(GCOVR_PATH gcovr)
+
+  if(LCOV_PATH AND GENHTML_PATH)
+    message(STATUS "Coverage reporting enabled (lcov found)")
+  elseif(GCOVR_PATH)
+    message(STATUS "Coverage reporting enabled (gcovr found)")
+  else()
+    message(WARNING "Coverage reporting enabled but neither lcov nor gcovr found")
+  endif()
+endif()
+
 # Testing
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
@@ -146,6 +170,120 @@ if(BUILD_TESTING)
       hardware_interface
       pluginlib
       rclcpp
+    )
+  endif()
+
+  # Coverage targets
+  if(ENABLE_COVERAGE)
+    # Create coverage directory
+    file(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/coverage)
+
+    if(LCOV_PATH AND GENHTML_PATH)
+      # LCOV coverage targets
+      add_custom_target(coverage_clean
+        COMMAND ${LCOV_PATH} --directory . --zerocounters
+        WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
+        COMMENT "Resetting code coverage counters to zero"
+      )
+
+      add_custom_target(coverage_run
+        COMMAND ${CMAKE_CTEST_COMMAND} --verbose
+        DEPENDS ${PROJECT_NAME}_unit_tests
+        WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
+        COMMENT "Running tests for coverage"
+      )
+
+      add_custom_target(coverage_capture
+        COMMAND ${LCOV_PATH} --directory . --capture --output-file coverage.info --ignore-errors mismatch,gcov,unused
+        COMMAND ${LCOV_PATH} --remove coverage.info
+          '/usr/*'
+          '${CMAKE_BINARY_DIR}/_deps/*'
+          '*/test/*'
+          '*/tests/*'
+          '*/.conan/*'
+          --output-file coverage_filtered.info
+        WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
+        DEPENDS coverage_run
+        COMMENT "Processing code coverage counters"
+      )
+
+      add_custom_target(coverage_html_lcov
+        COMMAND ${GENHTML_PATH} -o coverage coverage_filtered.info
+        WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
+        DEPENDS coverage_capture
+        COMMENT "Generating HTML coverage report with lcov"
+      )
+
+      add_custom_target(coverage_lcov
+        DEPENDS coverage_clean coverage_html_lcov
+        COMMENT "Generate lcov coverage report"
+      )
+    endif()
+
+    if(GCOVR_PATH)
+      # GCOVR coverage targets
+      add_custom_target(coverage_gcovr
+        COMMAND ${CMAKE_CTEST_COMMAND} --verbose
+        COMMAND ${GCOVR_PATH}
+          --root ${CMAKE_SOURCE_DIR}
+          --exclude '.*/test/.*'
+          --exclude '.*/tests/.*'
+          --exclude '.*/_deps/.*'
+          --exclude '/usr/.*'
+          --html --html-details
+          --output ${CMAKE_BINARY_DIR}/coverage/index.html
+        DEPENDS ${PROJECT_NAME}_unit_tests
+        WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
+        COMMENT "Generating coverage report with gcovr"
+      )
+
+      add_custom_target(coverage_xml
+        COMMAND ${CMAKE_CTEST_COMMAND} --verbose
+        COMMAND ${GCOVR_PATH}
+          --root ${CMAKE_SOURCE_DIR}
+          --exclude '.*/test/.*'
+          --exclude '.*/tests/.*'
+          --exclude '.*/_deps/.*'
+          --exclude '/usr/.*'
+          --xml --output ${CMAKE_BINARY_DIR}/coverage.xml
+        DEPENDS ${PROJECT_NAME}_unit_tests
+        WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
+        COMMENT "Generating XML coverage report"
+      )
+
+      add_custom_target(coverage_summary
+        COMMAND ${CMAKE_CTEST_COMMAND} --verbose
+        COMMAND ${GCOVR_PATH}
+          --root ${CMAKE_SOURCE_DIR}
+          --exclude '.*/test/.*'
+          --exclude '.*/tests/.*'
+          --exclude '.*/_deps/.*'
+          --exclude '/usr/.*'
+        DEPENDS ${PROJECT_NAME}_unit_tests
+        WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
+        COMMENT "Generating console coverage summary"
+      )
+    endif()
+
+    # Default coverage target - prefer lcov if available, otherwise gcovr
+    if(LCOV_PATH AND GENHTML_PATH)
+      add_custom_target(coverage
+        DEPENDS coverage_lcov
+        COMMENT "Generate coverage report (using lcov)"
+      )
+    elseif(GCOVR_PATH)
+      add_custom_target(coverage
+        DEPENDS coverage_gcovr
+        COMMENT "Generate coverage report (using gcovr)"
+      )
+    endif()
+
+    # Print coverage info
+    add_custom_target(coverage_info
+      COMMAND echo "Coverage report generated at:"
+      COMMAND echo "  HTML: ${CMAKE_BINARY_DIR}/coverage/index.html"
+      COMMAND echo "  XML:  ${CMAKE_BINARY_DIR}/coverage.xml (if gcovr used)"
+      COMMENT "Coverage report locations"
     )
   endif()
 endif()
