♻️ refactor(test): Remove unecessary test_main file

--- a/littlebot_base/CMakeLists.txt
+++ b/littlebot_base/CMakeLists.txt
@@ -118,7 +118,7 @@ if(BUILD_TESTING)
 
   # Unit tests for FirmwareComm
   ament_add_gtest(${PROJECT_NAME}_unit_tests
-    test/test_main.cpp
+    # test/test_main.cpp
     test/test_littlebot_driver.cpp
     test/test_littlebot_hardware_component.cpp
     test/test_serial_port.cpp
