🛠️ chore(cmake): Find URDF description file

--- a/littlebot_base/CMakeLists.txt
+++ b/littlebot_base/CMakeLists.txt
@@ -11,17 +11,17 @@ if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
 endif()
 
 find_package(ament_cmake REQUIRED)
-find_package(rclcpp REQUIRED)
-find_package(rclcpp_components REQUIRED)
-find_package(std_msgs REQUIRED)
-find_package(example_interfaces REQUIRED)
 find_package(controller_interface REQUIRED)
 find_package(controller_manager REQUIRED)
 find_package(controller_manager_msgs REQUIRED)
 find_package(hardware_interface REQUIRED)
+find_package(littlebot_description REQUIRED)
+find_package(PkgConfig REQUIRED)
 find_package(pluginlib REQUIRED)
 find_package(Protobuf REQUIRED)
-find_package(PkgConfig REQUIRED)
+find_package(rclcpp REQUIRED)
+find_package(rclcpp_components REQUIRED)
+find_package(std_msgs REQUIRED)
 
 # Find libserial using pkg-config
 pkg_check_modules(LIBSERIAL REQUIRED libserial)
@@ -109,9 +109,44 @@ ament_export_dependencies(
 
 # Testing
 if(BUILD_TESTING)
-  find_package(ament_lint_auto REQUIRED)
-  find_package(ament_cmake_gtest REQUIRED)
   find_package(ament_cmake_gmock REQUIRED)
+  find_package(ament_cmake_gtest REQUIRED)
+  find_package(ament_lint_auto REQUIRED)
+
+  find_file(LITTLEBOT_URDF_FILE
+    NAMES littlebot_description.urdf.xacro
+    PATHS
+      "${CMAKE_CURRENT_SOURCE_DIR}/../littlebot_description/urdf"
+    NO_DEFAULT_PATH
+  )
+
+  if(NOT LITTLEBOT_URDF_FILE)
+    message(WARNING "Could not find littlebot URDF file")
+  endif()
+
+  # Find the xacro executable
+  find_program(XACRO_EXECUTABLE xacro
+    HINTS ENV PATH /usr/bin /usr/local/bin
+  )
+
+  if(NOT XACRO_EXECUTABLE)
+    message(FATAL_ERROR "xacro executable not found. Install ROS xacro or make
+    'xacro' available in PATH.")
+  endif()
+
+  # Convert XACRO to URDF for testing
+  set(TEST_URDF_FILE ${CMAKE_CURRENT_BINARY_DIR}/test_littlebot.urdf)
+
+  add_custom_command(
+    OUTPUT ${TEST_URDF_FILE}
+    COMMAND ${XACRO_EXECUTABLE} ${LITTLEBOT_URDF_FILE} -o ${TEST_URDF_FILE}
+    DEPENDS ${LITTLEBOT_URDF_FILE}
+    BYPRODUCTS ${TEST_URDF_FILE}
+    COMMENT "Converting XACRO to URDF for testing"
+  )
+
+  # Add custom target for the URDF generation
+  add_custom_target(generate_test_urdf DEPENDS ${TEST_URDF_FILE})
 
   # Lint tests
   ament_lint_auto_find_test_dependencies()
@@ -127,6 +162,11 @@ if(BUILD_TESTING)
     ${PROTO_SRCS}
     ${PROTO_HDRS}
   )
+
+  # Make test depend on URDF generation
+  if(TARGET generate_test_urdf)
+    add_dependencies(${PROJECT_NAME}_unit_tests generate_test_urdf)
+  endif()
 
   if(TARGET ${PROJECT_NAME}_unit_tests)
     target_include_directories(${PROJECT_NAME}_unit_tests PRIVATE
@@ -147,6 +187,12 @@ if(BUILD_TESTING)
       pluginlib
       rclcpp
     )
+
+    # Pass the URDF file path to the test
+    if(LITTLEBOT_URDF_FILE)
+      target_compile_definitions(${PROJECT_NAME}_unit_tests
+        PRIVATE "LITTLEBOT_URDF_FILE=\"${LITTLEBOT_URDF_FILE}\"")
+    endif()
   endif()
 endif()
 
