--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -1,23 +1,51 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: Code Quality
-run-name: Run Lint Checks
-on: [pull_request]
+name: ROS Tests
+
+on:
+  push:
+    branches:
+      - main
+  workflow_dispatch:
+
 jobs:
-  cpplint:
-    runs-on: ubuntu-20.04
+  ros-tests:
+    name: Run ROS Tests
+    runs-on: ubuntu-22.04
+
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up Python 3.7
-        uses: actions/setup-python@v3
+      # 1. Check out the repository
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Set up Python 3.12
+        uses: actions/setup-python@v5
         with:
-          python-version: 3.7
-      - name: Update pip
-        run: python -m pip install --upgrade pip
+          python-version: 3.12
+
+      # 2. Set up ROS 2 (e.g., Humble)
+      - name: Set up ROS 2
+        uses: ros-tooling/setup-ros@v0.7.15
+        with:
+          version: humble
+          packages: ros-base  # minimal ROS 2 packages
+
+      # 3. Install dependencies with rosdep
       - name: Install dependencies
-        run: pip install cpplint flake8
-      - name: Lint with flake8
-        run: flake8
-      - name: Lint with cpplint
-        run: cpplint --recursive .
+        run: |
+          sudo rosdep init || true
+          rosdep update
+          rosdep install --from-paths src --ignore-src -y
+
+      # 4. Build the workspace
+      - name: Build workspace
+        run: |
+          colcon build --symlink-install
+
+      # 5. Source workspace and run tests (optional)
+      - name: Run tests
+        run: |
+          source install/setup.bash
+          colcon test
+          colcon test-result --verbose
