--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -18,6 +18,8 @@ jobs:
       # 1. Check out the repository
       - name: Checkout repository
         uses: actions/checkout@v3
+        with:
+          path: ros_ws/src
 
       - name: Set up Python 3.12
         uses: actions/setup-python@v5
@@ -33,6 +35,7 @@ jobs:
       # 3. Install dependencies with rosdep
       - name: Install dependencies
         run: |
+          cd ros_ws
           sudo rosdep init || true
           rosdep update
           rosdep install --from-paths src --ignore-src -y
